--- a/dash3.html
+++ b/dash3.html
@@ -99,7 +99,7 @@
 <body class="min-h-screen">
     <header class="sticky-header bg-gradient-to-r from-indigo-600 to-blue-800 text-white shadow-lg">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <h1 class="text-2xl md:text-3xl font-bold">מערכת 3 - שנת ייצור ומחירים</h1>
+            <h1 class="text-2xl md:text-3xl font-bold">מערכת 3 - שנת ייצור ביחס למחירים</h1>
             <div class="flex items-center space-x-4">
                 <button id="darkModeToggle" class="text-white focus:outline-none" aria-label="החלף מצב תצוגה">
                     <i class="fas fa-moon"></i>
@@ -117,7 +117,7 @@
         </button>
         <nav class="space-y-4">
             <a href="index.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">חזרה לדף הראשי</a>
-            <a href="dash1.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 1 - מכירות לפי יחידות</a>
+            <a href="dash1.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 1 - סך מכירות על פי יחידות</a>
             <a href="dash2.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 2 - קטגוריות מול רווחים</a>
         </nav>
     </aside>
@@ -125,7 +125,7 @@
     <main class="container mx-auto px-4 py-8">
         <section class="card bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg mb-8">
             <h2 class="text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-4">תיאור המערכת</h2>
-            <p class="text-gray-700 dark:text-gray-300">מערכת זו מציגה את הקשר בין שנת ייצור המוצרים למחיריהם, ומאפשרת ניתוח מגמות מחירים וזיהוי השפעות שנת הייצור על התמחור.</p>
+            <p class="text-gray-700 dark:text-gray-300">מערכת זו מציגה את הקשר בין שנת ייצור המוצרים למחיריהם. הדשבורד מאפשר ניתוח מגמות מחירים לאורך זמן וזיהוי השפעות של שנת ייצור על התמחור.</p>
         </section>
         <section class="card bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-4">דשבורד מחירים</h2>
