--- a/index.html
+++ b/index.html
@@ -80,20 +80,6 @@
         .gradient-btn:hover {
             background: linear-gradient(45deg, #ff8e53, #ff6b6b);
         }
-        .loading-spinner {
-            display: none;
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #4b6cb7;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            margin: auto;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
     </style>
 </head>
 <body class="min-h-screen">
@@ -116,21 +102,23 @@
             <i class="fas fa-times"></i>
         </button>
         <nav class="space-y-4">
-            <a href="dash1.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 1 - מכירות לפי יחידות</a>
+            <a href="dash1.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 1 - סך מכירות על פי יחידות</a>
             <a href="dash2.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 2 - קטגוריות מול רווחים</a>
-            <a href="dash3.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 3 - שנת ייצור ומחירים</a>
+            <a href="dash3.html" class="block px-4 py-2 gradient-btn text-white rounded-lg hover:shadow-lg">מערכת 3 - שנת ייצור ביחס למחירים</a>
         </nav>
     </aside>
 
     <main class="container mx-auto px-4 py-8">
         <section class="card bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg mb-8">
-            <h2 class="text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-4">על מערכת דנה</h2>
-            <p class="text-gray-700 dark:text-gray-300 mb-4">מערכת דנה היא פלטפורמה חדשנית לניתוח ויזואלי של נתונים עסקיים, המיועדת לשיפור תהליכי קבלת החלטות בתחום התמחור. המערכת מציעה דשבורדים אינטראקטיביים המותאמים אישית, המאפשרים זיהוי מגמות, ניתוח ביצועים וגילוי הזדמנויות עסקיות.</p>
+            <h2 class="text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-4">מערכת דנה - ויזואליזציה לקבלת החלטות בתחום התמחור</h2>
+            <p class="text-gray-700 dark:text-gray-300 mb-4">מערכת דנה היא פלטפורמה מתקדמת לניתוח ויזואלי של נתונים עסקיים, המיועדת לסייע בקבלת החלטות מושכלות בתחום התמחור. המערכת מאפשרת הפקת תובנות ממגוון נתונים עסקיים באמצעות גרפים ודשבורדים אינטראקטיביים המותאמים לצרכי הלקוחות.</p>
+            <p class="text-gray-700 dark:text-gray-300 mb-4">הגרפים במערכת מציגים נתונים מורכבים בצורה ברורה וקלה להבנה, תוך זיהוי מגמות, השוואות בין קטגוריות וניתוח ביצועים לאורך זמן. התועלות כוללות:</p>
             <ul class="list-disc pr-6 text-gray-700 dark:text-gray-300">
-                <li>תצוגה ויזואלית ברורה של נתונים מורכבים להבנה מהירה.</li>
-                <li>ניתוח מדויק של נתוני מכירות, רווחים ומחירים.</li>
-                <li>ממשק ידידותי וגמיש המותאם לצרכי העסק.</li>
+                <li>שיפור תהליכי קבלת החלטות באמצעות.concatenate visual data presentation.</li>
+                <li>זיהוי הזדמנויות עסקיות וחולשות על בסיס ניתוח מדויק.</li>
+                <li>התאמה אישית של הדשבורדים לצרכים הספציפיים של כל עסק.</li>
             </ul>
+            <p class="text-gray-700 dark:text-gray-300">המערכת מבוססת על טכנולוגיות מתקדמות לניתוח נתונים, ומאפשרת לעסקים לייצר תובנות על בסיס הנתונים הפנימיים שלהם תוך שמירה על ממשק ידידותי וקל לשימוש.</p>
         </section>
     </main>
 
